# Makefile.am - GnuPG 4 Windows Makefile for Logos.
# Copyright (C) 2005 g10 Code GmbH
# 
# This file is part of GPG4Win.
# 
# GPG4Win is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
# 
# GPG4Win is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, see <http://www.gnu.org/licenses/>.

EXTRA_DIST = gpg4win-logo.eps         \
             gpg4win-logo-400px.png   \
             gpg4win-logo-400px.bmp   \
             gpg4win-logo-favicon.bmp \
             gpg4win-logo-icon.ico \
             gpg4win-logo-164x314.bmp \
             gpg4win_lock_file.svg \
             gpg4win_lock_logo.svg \
             gpg4win-nsis-header-install-150x57.bmp    \
             gpg4win-nsis-header-uninstall-150x57.bmp  \
             gpg4win-nsis-install.ico		       \
             gpg4win-nsis-uninstall.ico		       \
             gpg4win-nsis-wizard-install-164x314.bmp   \
             gpg4win-nsis-wizard-uninstall-164x314.bmp

